fix dark mode pop ups...

--- a/controls/css/style.css
+++ b/controls/css/style.css
@@ -20,6 +20,22 @@ body {
 .modal-dialog {
     margin-top: 60px;
 }
+.modal-content {
+    background-color: #333;
+}
+.modal-body .btn-primary {
+    border: 2px solid black;
+}
+.modal-body .btn-primary:hover {
+    border: 2px solid black;
+    border-top: 3px solid black;
+    box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+}
+.modal-body .form-control, .modal-body .form-control select,.modal-body .form-control option  {
+    border: 2px solid black;
+    background-color: #333333;
+    color: white;
+}
 header.primary {
     background-color: #596579;
     background-repeat: no-repeat;
